<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/amount_of_money_to_receive_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:textAlignment="center"
        android:ems="10"
        android:hint="@string/amount_of_money_to_receive"
        android:text="@string/_100_00" />

    <Button
        android:id="@+id/receive_money_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_states"
        android:onClick="receiveMoney"
        android:text="@string/generate_qr_code" />
</LinearLayout>