<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".activities.TransferMoneyActivity">

    <TextView
        android:id="@+id/info_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_edittext"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_text_view"
        android:minLines="4"
        android:padding="16dp"
        android:text="@string/loading_information"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="numberPassword"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_states"
        android:onClick="verifyTransaction"
        android:padding="16dp"
        android:text="@string/verify"/>
</RelativeLayout>